--- a/package.json
+++ b/package.json
@@ -1,10 +1,9 @@
 {
-  "type": "module",
+  "name": "@outblock.io/frw-scripts",
+  "version": "0.0.1",
   "main": "index.js",
   "scripts": {
     "build": "pnpm build",
-    "changeset": "changeset",
-    "release": "npm run build && npm run changeset publish",
     "test": "vitest"
   },
   "dependencies": {
